modified: pequenas alterações no código

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,14 +1,8 @@
-# Datasource
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
 
-# H2 console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# JPA
-spring.jpa.show-sql=true
+#SQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://db:3306/currency-converterdb?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=admindb
+spring.datasource.password=81041683
 spring.jpa.hibernate.ddl-auto=update
-
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
