--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 spring.servlet.cors.enabled=true
 
 
+#JPA
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
