--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -46,17 +45,16 @@
     		<groupId>org.mockito</groupId>
    			 <artifactId>mockito-core</artifactId>
     		<scope>test</scope>
-		</dependency>
+		</dependency>     
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
+  			  <groupId>org.hamcrest</groupId>
+    		  <artifactId>hamcrest</artifactId>
+   			 <scope>test</scope>
+ 		 </dependency>
         <dependency>
    			 <groupId>org.hibernate.validator</groupId>
     		<artifactId>hibernate-validator</artifactId>
    	  </dependency>
-
         <dependency>
       		<groupId>io.github.cdimascio</groupId>
       		<artifactId>dotenv-java</artifactId>
@@ -73,13 +71,11 @@
      		 <scope>runtime</scope>
       		<optional>true</optional>
     	</dependency>
-    	
     	 <dependency>
       		<groupId>com.h2database</groupId>
      		 <artifactId>h2</artifactId>
      		 <scope>runtime</scope>
     	</dependency>
-    	
     	<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
@@ -100,26 +96,33 @@
    			 <artifactId>wiremock-jre8</artifactId>
    			 <version>2.29.1</version>
    			 <scope>test</scope>
-	   </dependency>
-	   
+	   </dependency>   
 	    <dependency>
   			<groupId>io.qameta.allure</groupId>
   			<artifactId>allure-junit5</artifactId>
   			<version>2.17.0</version>
  			 <scope>test</scope>
 		</dependency>
-	  
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
 			<version>2.0.1.Final</version>
 		</dependency>
-
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>json-path</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+    		<groupId>org.junit.jupiter</groupId>
+    		<artifactId>junit-jupiter-api</artifactId>
+   			 <scope>test</scope>
+    	 </dependency>
+    	<dependency>
+    			<groupId>org.junit.jupiter</groupId>
+    			<artifactId>junit-jupiter-engine</artifactId>
+   				 <scope>test</scope>
+		</dependency>
     </dependencies>
 
     <build>
