pipeline: update Jenkisfile

--- a/src/main/resources/Jenkinsfile
+++ b/src/main/resources/Jenkinsfile
@@ -2,6 +2,8 @@ pipeline {
     agent any
     environment {
         DOCKER_IMAGE_TAG  = "${env.BUILD_ID}"
+        DOCKER_REGISTRY = readFile('.env').trim()
+        DOCKER_IMAGE_NAME = readFile('.env').trim()
     }
     triggers {
         githubPush(credentialsId:)
@@ -24,7 +26,5 @@ pipeline {
             }
         }
     }
-     options {
-        envFile '.env'
-}
+     
 }
