--- a/pom.xml
+++ b/pom.xml
@@ -104,10 +104,18 @@
  			 <scope>test</scope>
 		</dependency>
 		<dependency>
+    		<groupId>org.junit.jupiter</groupId>
+    		<artifactId>junit-jupiter</artifactId>
+    		<version>5.8.1</version>
+   			 <scope>test</scope>
+		</dependency>
+		
+		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
 			<version>2.0.1.Final</version>
-			</dependency>
+		</dependency>
+        
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>json-path</artifactId>
@@ -116,28 +124,30 @@
         <dependency>
     		<groupId>org.junit.jupiter</groupId>
     		<artifactId>junit-jupiter-api</artifactId>
+   			  <version>5.8.1</version>
    			 <scope>test</scope>
     	 </dependency>
     	<dependency>
     			<groupId>org.junit.jupiter</groupId>
     			<artifactId>junit-jupiter-engine</artifactId>
-   				 <scope>test</scope>
+   				 <version>5.8.1</version>
+				<scope>test</scope>
 		</dependency>
     </dependencies>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>io.qameta.allure</groupId>
-                <artifactId>allure-maven</artifactId>
-                <version>2.17.0</version>
-            </plugin>
+    <plugins>
+        <plugin>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-maven</artifactId>
+            <version>2.17.0</version>
+        </plugin>
 
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
+    </plugins>
+</build>
 
 </project>
