--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 
     <properties>
         <java.version>17</java.version>
+    	<aspectj.version>1.8.10</aspectj.version>
     </properties>
 
     <dependencies>
@@ -110,7 +111,6 @@
    			 <scope>test</scope>
 		</dependency>
 		
-		
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
@@ -122,6 +122,7 @@
             <artifactId>json-path</artifactId>
             <scope>test</scope>
         </dependency>
+        
         <dependency>
     		<groupId>org.junit.jupiter</groupId>
     		<artifactId>junit-jupiter-api</artifactId>
@@ -134,22 +135,34 @@
    				 <version>5.8.1</version>
 				<scope>test</scope>
 		</dependency>
+		
     </dependencies>
-    <repositories>
-   		 <repository>
-      		<id>allure</id>
-     		 <url>https://dl.bintray.com/qameta/maven/</url>
-    	  </repository>
-  	</repositories>
-
  <build>
      <plugins>
-        <plugin>
-            <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-maven</artifactId>
-            <version> 2.21.0 </version>
+			<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.20</version>
+            <configuration>
+                <testFailureIgnore>false</testFailureIgnore>
+                <argLine>
+                    -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                </argLine>
+                <properties>
+                    <property>
+                        <name>listener</name>
+                        <value>io.qameta.allure.junit4.AllureJunit4</value>
+                    </property>
+                </properties>
+            </configuration>
+            <dependencies>
+                <dependency>
+                    <groupId>org.aspectj</groupId>
+                    <artifactId>aspectjweaver</artifactId>
+                    <version>${aspectj.version}</version>
+                </dependency>
+            </dependencies>
         </plugin>
-
         <plugin>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
