--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,22 @@
    		</dependencies>
  <build>
      <plugins>
+		 
+		 <plugin>
+       		 	<groupId>org.springframework.boot</groupId>
+        		<artifactId>spring-boot-maven-plugin</artifactId>
+        	<configuration>
+           	 <mainClass>com.oracle.next.one.CurrencyConverterApplication</mainClass>
+            <layout>JAR</layout>
+        </configuration>
+        <executions>
+    		<execution>
+        		<goals>
+           			 <goal>repackage</goal>
+       			 </goals>
+    			</execution>
+			</executions>
+    	</plugin>
 			  <plugin>
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
