--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
             steps {
                 script {
                     def imageBackend = "${user_docker}/${image_backend}:${env.BUILD_ID}"
-                    def backendCustom_image = docker.build(imageBackend, '-f ../docker/Dockerfile-backend .')
+                    def backendCustom_image = docker.build(imageBackend, '-f ./docker/Dockerfile-backend .')
 
                     docker.withRegistry('https://registry.hub.docker.com', 'dockerhub-credentials')
                     backendCustom_image.push()
@@ -24,7 +24,7 @@ pipeline {
             steps {
                 script {
                     def imageFrontend = "${user_docker}/${image_frontend}:${env.BUILD_ID}"
-                    def frontendCustom_image = docker.build(imageFrontend, '-f ../docker/dockerfile-frontend .')
+                    def frontendCustom_image = docker.build(imageFrontend, '-f ./docker/dockerfile-frontend .')
 
                     docker.withRegistry('https://registry.hub.docker.com', 'dockerhub-credentials')
                     frontendCustom_image.push()
