--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
                     def backendCustom_image = docker.build(imageBackend, '-f ./docker/Dockerfile-backend .')
 
                     docker.withRegistry('https://registry.hub.docker.com', 'dockerhub-credentials')
-                    backendCustom_image.push()
+                    backendCustom_image.push(${env.BUILD_ID})
                     backendCustom_image.push('latest')
                 }
             }
@@ -27,7 +27,7 @@ pipeline {
                     def frontendCustom_image = docker.build(imageFrontend, '-f ./docker/dockerfile-frontend .')
 
                     docker.withRegistry('https://registry.hub.docker.com', 'dockerhub-credentials')
-                    frontendCustom_image.push()
+                    frontendCustom_image.push(${env.BUILD_ID})
                     frontendCustom_image.push('latest')
                 }
             }
