--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -45,7 +45,7 @@ pipeline {
                 }
             steps {
                 script {
-                    withKubeConfig([credentialsId: 'kubeconfig']) {
+                    withKubeConfig([credentialsId: 'kubeconfig-credentials']) {
                         sh 'sed -i "s/{{TAG}}/tag_version/g" ./k8s/deployment.yml'
                         sh 'kubectl apply -f ./k8s/deploymnet.yml'
                     }
