feat: pipelinev6.0 - ajustes no deploy k8s

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -47,7 +47,7 @@ pipeline {
                 script {
                     withKubeConfig([credentialsId: 'kubeconfig-credentials']) {
                         sh 'sed -i "s/{{TAG}}/tag_version/g" ./k8s/deployment.yml'
-                        sh 'kubectl apply -f ./k8s/deploymnet.yml'
+                        sh 'kubectl apply -f ./k8s/deployment.yml'
                     }
                 }
             }
