--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -46,8 +46,8 @@ pipeline {
             steps {
                 script {
                     withKubeConfig([credentialsId: 'kubeconfig-credentials']) {
-                        sh 'sed -i "s/{{TAG}}/tag_version/g" ./k8s/deployment.yml'
-                        sh 'kubectl apply -f ./k8s/deployment.yml'
+                        sh 'sed -i "s/{{TAG}}/tag_version/g" ./K8s/deployment.yml'
+                        sh 'kubectl apply -f ./K8s/deployment.yml'
                     }
                 }
             }
