--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -46,7 +46,7 @@ pipeline {
             steps {
                 script {
                     withKubeConfig([credentialsId: 'kubeconfig-credentials']) {
-                        sh 'sed -i "s/{{TAG}}/tag_version/g" ./k8s/deployment.yaml'
+                        sh 'sed -i "s/{{TAG}}/$tag_version/g" ./k8s/deployment.yaml'
                         sh 'kubectl apply -f ./k8s/deployment.yaml'
                     }
                 }
