Feat: "Micrometer with ´prometheus"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,16 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 
+#MicroMeter
+management.endpoints.web.exposure.include=prometheus
+
+
 
 #Spring DOC
-#springdoc.swagger-ui.path=/swagger-ui-currencyconverter.html
-#springdoc.swagger-ui.operationsSorter=method
 springdoc.packagesToScan=com.oracle.next.one
+
 #springdoc.pathsToMatch=/transactions, /converter/**
 # swagger-ui custom path
 #springdoc.swagger-ui.path=/swagger-ui.html
+#springdoc.swagger-ui.path=/swagger-ui-currencyconverter.html
+#springdoc.swagger-ui.operationsSorter=method
