--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,27 @@
         <dependency>
    			 <groupId>org.hibernate.validator</groupId>
     		<artifactId>hibernate-validator</artifactId>
-   	  </dependency>
+    	</dependency>
+	    <dependency>
+    		<groupId>io.micrometer</groupId>
+    		<artifactId>micrometer-core</artifactId>
+    		<version>1.9.9</version>
+			</dependency>
+		<dependency>
+    		<groupId>io.micrometer</groupId>
+    		<artifactId>micrometer-registry-prometheus</artifactId>
+    		<version>1.9.9</version>
+		</dependency>
+		<dependency>
+    		<groupId>io.github.mweirauch</groupId>
+   			 <artifactId>micrometer-jvm-extras</artifactId>
+    		<version>0.2.2</version>
+			</dependency>
+		<dependency>
+    		<groupId>io.prometheus</groupId>
+    		<artifactId>simpleclient_httpserver</artifactId>
+    		<version>0.11.0</version>
+		</dependency>
         <dependency>
       		<groupId>io.github.cdimascio</groupId>
       		<artifactId>dotenv-java</artifactId>
