--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,22 @@
-{"properties": [{
-  "name": "spring.servlet.cors.enabled",
-  "type": "java.lang.String",
-  "description": "A description for 'spring.servlet.cors.enabled'"
-}]}
+{"properties": [
+  {
+    "name": "spring.servlet.cors.enabled",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.servlet.cors.enabled'"
+  },
+  {
+    "name": "management.endpoint.metrics.enabled",
+    "type": "java.lang.String",
+    "description": "A description for 'management.endpoint.metrics.enabled'"
+  },
+  {
+    "name": "management.endpoint.prometheus.enabled",
+    "type": "java.lang.String",
+    "description": "A description for 'management.endpoint.prometheus.enabled'"
+  },
+  {
+    "name": "management.endpoints.web.exposure.include",
+    "type": "java.lang.String",
+    "description": "A description for 'management.endpoints.web.exposure.include'"
+  }
+]}
